Fixed header and warehouse details alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,9 @@ body {
     text-decoration: none;
   }
   margin: 0;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
 }
 
 h1,
