--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -20,7 +20,7 @@
     height: 100vh;
     padding-top: 10rem;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     top:0;
     width: 100%;
   }
